--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "client/dist" }
+      "config": { "distDir": "dist" }
     },
     {
       "src": "api/**/*.js",
