--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "config": { "distDir": "dist" }
     },
     {
-      "src": "api/**/*.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
