--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "curl -fsSL https://bun.sh/install | bash && ~/.bun/bin/bun install --frozen-lockfile",
   "buildCommand": "~/.bun/bin/bun --cwd client run build",
+
   "builds": [
     {
       "src": "client/package.json",
@@ -9,12 +10,13 @@
       "config": { "distDir": "dist" }
     },
     {
-      "src": "api/index.js",
+      "src": "server/index.js",
       "use": "@vercel/node"
     }
   ],
+
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/api/(.*)", "dest": "/server/index.js" },
     { "src": "/(.*)",     "dest": "/client/$1" }
   ]
 }
